--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-            fileTree(dir: 'libs', include: ['*.jar']),
             'org.scream3r:jssc:2.8.0',
             'mysql:mysql-connector-java:5.1.33',
             'org.webbitserver:webbit:0.4.15',
+            'com.google.protobuf:protobuf-java:2.6.1'
     )
 }
