--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 sourceCompatibility = 1.5
-version = '1.0'
+version = '1.0.2'
 
 repositories {
     mavenCentral()
@@ -9,9 +9,10 @@ repositories {
 
 task fullJar(type: Jar) {
     manifest {
-        attributes 'Implementation-Title': 'RBL Server',
+        attributes ('Implementation-Title': 'RBL Server',
                 'Implementation-Version': version,
-                'Main-Class': 'RaspberryLife'
+                'Implementation-Timestamp': new Date(),
+                'Main-Class': 'RaspberryLife')
     }
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
@@ -20,6 +21,7 @@ task fullJar(type: Jar) {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile fileTree(dir: 'libs', include: '*.jar')
     compile(
             'org.scream3r:jssc:2.8.0',
             'mysql:mysql-connector-java:5.1.33',
