--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ task fullJar(type: Jar) {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile fileTree(dir: 'libs', include: '*.jar')
     compile(
             'org.scream3r:jssc:2.8.0', // Serial connection
             'mysql:mysql-connector-java:5.1.33', // MySQL conenction
@@ -29,6 +28,8 @@ dependencies {
             'com.google.protobuf:protobuf-java:2.6.1', // Protocol buffers
             'net.engio:mbassador:1.2.0', // Event bus
             'org.quartz-scheduler:quartz:2.2.1', // Scheduler
-            'commons-configuration:commons-configuration:1.7' // Configuration
+            'eu.agrosense.client:lib-slf4j-simple:1.7.6-NB80', // Logging facade (used for Quartz)
+            'commons-configuration:commons-configuration:1.7', // Configuration
+            'com.google.api-client:google-api-client-java6:1.19.0' //Google client api (Calendar)
     )
 }
