--- a/build.gradle
+++ b/build.gradle
@@ -28,19 +28,9 @@ dependencies {
             'com.google.protobuf:protobuf-java:2.6.1', // Protocol buffers
             'net.engio:mbassador:1.2.0', // Event bus
             'org.quartz-scheduler:quartz:2.2.1', // Scheduler
-            //'eu.agrosense.client:lib-slf4j-simple:1.7.6-NB80', // Logging facade (used for Quartz)
+            // Logging facade used for Quartz (was unresolved at some point)
+            //'eu.agrosense.client:lib-slf4j-simple:1.7.6-NB80',
             'commons-configuration:commons-configuration:1.7', // Configuration
-
-            //GOOGLE APIs
-            // Java client api
-            'com.google.api-client:google-api-client-java6:1.19.0',
-            // Jackson api
-            'com.google.http-client:google-http-client-jackson2:1.19.0',
-            // Http client
-            'com.google.http-client:google-http-client:1.19.0',
-            //Calendar service
-            'com.google.apis:google-api-services-calendar:v3-rev105-1.19.0'
-
-
+            'org.apache.commons:commons-email:1.1' // E-Mail
     )
 }
