--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,18 @@ dependencies {
             // Logging facade used for Quartz (was unresolved at some point)
             //'eu.agrosense.client:lib-slf4j-simple:1.7.6-NB80',
             'commons-configuration:commons-configuration:1.7', // Configuration
-            'org.apache.commons:commons-email:1.1' // E-Mail
+            'org.apache.commons:commons-email:1.1', // E-Mail
+
+            //Hibernate
+            'org.hibernate:hibernate-entitymanager:4.3.7.Final',
+            'org.hibernate:hibernate-core:4.3.7.Final',
+            'org.javassist:javassist:3.18.1-GA',
+            'org.jboss.logging:jboss-logging:3.1.3.GA',
+            'org.jboss.logging:jboss-logging-annotations:1.2.0.Beta1',
+            'dom4j:dom4j:1.6.1',
+            'org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec:1.0.0.Final',
+            'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+            //'org.hibernate:hibernate-annotations:3.5.6-Final'
+
     )
 }
