--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ dependencies {
             'org.jboss.logging:jboss-logging-annotations:1.2.0.Beta1',
             'dom4j:dom4j:1.6.1',
             'org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec:1.0.0.Final',
-            'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
-            //'org.hibernate:hibernate-annotations:3.5.6-Final'
-
+            'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final',
+            'org.hibernate:hibernate-annotations:3.5.6-Final',
+            'org.hibernate:hibernate-validator:5.1.3.Final'
     )
 }
