--- a/build.gradle
+++ b/build.gradle
@@ -29,20 +29,20 @@ dependencies {
             'com.google.guava:guava:18.0', // Guava libs (Event bus, etc)
             'org.quartz-scheduler:quartz:2.2.1', // Scheduler
             // Logging facade used for Quartz (was unresolved at some point)
-            //'eu.agrosense.client:lib-slf4j-simple:1.7.6-NB80',
+            'eu.agrosense.client:lib-slf4j-simple:1.7.6-NB80',
             'commons-configuration:commons-configuration:1.7', // Configuration
             'org.apache.commons:commons-email:1.1', // E-Mail
 
             //Hibernate
             'org.hibernate:hibernate-entitymanager:4.3.7.Final',
             'org.hibernate:hibernate-core:4.3.7.Final',
-            'org.javassist:javassist:3.18.1-GA',
-            'org.jboss.logging:jboss-logging:3.1.3.GA',
-            'org.jboss.logging:jboss-logging-annotations:1.2.0.Beta1',
-            'dom4j:dom4j:1.6.1',
-            'org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec:1.0.0.Final',
-            'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final',
+            //'org.javassist:javassist:3.18.1-GA',
+            //'org.jboss.logging:jboss-logging:3.1.3.GA',
+            //'org.jboss.logging:jboss-logging-annotations:1.2.0.Beta1',
+            //'dom4j:dom4j:1.6.1',
+            //'org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec:1.0.0.Final',
+            //'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final',
             'org.hibernate:hibernate-annotations:3.5.6-Final',
-            'org.hibernate:hibernate-validator:5.1.3.Final'
+            //'org.hibernate:hibernate-validator:5.1.3.Final'
     )
 }
