--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -2,3 +2,4 @@ org.quartz.scheduler.instanceName = RBLScheduler
 org.quartz.threadPool.threadCount = 1
 org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
 log4j.logger.org.quartz = OFF
+log4j.rootLogger=OFF
