--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+//sourceCompatibility = 1.5
 version = '1.1.1'
 
 repositories {
@@ -14,7 +14,7 @@ task fullJar(type: Jar) {
                 'Implementation-Timestamp': new Date(),
                 'Main-Class': 'RaspberryLife')
     }
-    baseName = project.name + '-all'
+    baseName = project.name
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
