--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
             //Hibernate
             'org.hibernate:hibernate-entitymanager:4.3.7.Final',
             'org.hibernate:hibernate-core:4.3.7.Final',
+            'org.slf4j:slf4j-api:1.7.10',
+            'org.slf4j:slf4j-simple:1.7.10',
             //'org.javassist:javassist:3.18.1-GA',
             //'org.jboss.logging:jboss-logging:3.1.3.GA',
             //'org.jboss.logging:jboss-logging-annotations:1.2.0.Beta1',
