add more config to log4 props

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,3 +12,6 @@ log4j.logger.org.hibernate=ERROR
  
 # Log all JDBC parameters
 log4j.logger.org.hibernate.type=ERROR
+
+# disable quartz logger
+log4j.logger.org.quartz = OFF
