--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 mainClassName = 'RaspberryLife'
 // Build source with 'gradle distZip'
 
-//sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 version = '1.1.6'
 
 repositories {
