--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 mainClassName = 'RaspberryLife'
 // Build source with 'gradle distZip'
 
-sourceCompatibility = 1.8
+sourceCompatibility = '1.7'
 version = '1.1.6'
 
 repositories {
