write logic to database

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,11 +7,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 # Root logger option
 log4j.rootLogger=ERROR
  
-# Log everything. Good for troubleshooting
-log4j.logger.org.hibernate=ERROR
- 
-# Log all JDBC parameters
-log4j.logger.org.hibernate.type=ERROR
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type=TRACE
 
 # disable quartz logger
 log4j.logger.org.quartz = OFF
