--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,14 +1,27 @@
 # Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.Target=System.out
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+
+# Define the file appender
+log4j.appender.FILE=org.apache.log4j.FileAppender
+
+# Set the immediate flush to true (default)
+log4j.appender.FILE.ImmediateFlush=true
+
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+
+log = /home/peter/
+
+log4j.appender.FILE.File=${log}/rbl.log
  
 # Root logger option
-log4j.rootLogger=ERROR
- 
-log4j.logger.org.hibernate.SQL=DEBUG
-log4j.logger.org.hibernate.type=TRACE
+log4j.rootLogger=INFO, FILE
+
+log4j.logger.org.hibernate.SQL=DEBUG, FILE
+log4j.logger.org.hibernate.type=TRACE, FILE
 
 # disable quartz logger
 log4j.logger.org.quartz = OFF
